service.yaml
apiVersion: v1
kind: Service
metadata:
  name: active-svc
  namespace: canary
spec:
  type: ClusterIP
  selector:
    app: rollout-bluegreen
  ports:
  - port: 80
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: preview-svc
  namespace: canary
spec:
  type: ClusterIP
  selector:
    app: rollout-bluegreen
  ports:
  - port: 80
    targetPort: 5000
