ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: advenzone.sirpify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: active-svc
            port:
              number: 80
  - host: advenzone-staging.sirpify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: preview-svc
            port:
              number: 80
